// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem component should render with avatar 1`] = `
<View>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "peru",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <Avatar
      source={
        Object {
          "uri": "avatar_uri",
        }
      }
    />
  </PadView>
</View>
`;

exports[`ListItem component should render with disabled true and styles 1`] = `
<View
  disabled={true}
>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "gray",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 10,
      }
    }
  />
</View>
`;

exports[`ListItem component should render with input 1`] = `
<View>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <Component
      placeholder="Enter Text"
    />
  </PadView>
</View>
`;

exports[`ListItem component should render with left icon 1`] = `
<View>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <Icon
      color="red"
      name="wifi"
      size={20}
      type="font-awesome"
    />
  </PadView>
</View>
`;

exports[`ListItem component should render with title and subtitle 1`] = `
<View>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <Component>
      <Component
        numberOfLines={5}
        style={
          Object {
            "backgroundColor": "peru",
          }
        }
      >
        title test
      </Component>
      <Component
        style={
          Object {
            "backgroundColor": "peru",
          }
        }
      >
        title test
      </Component>
    </Component>
    <Component
      right={true}
    >
      <Component
        right={true}
      >
        title
      </Component>
    </Component>
  </PadView>
</View>
`;

exports[`ListItem component should render with topDivider and bottomDivider 1`] = `
<View>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderBottomWidth": 0.5,
        "borderColor": "#bcbbc1",
        "borderTopWidth": 0.5,
        "flexDirection": "row",
        "padding": 14,
      }
    }
  />
</View>
`;

exports[`ListItem component should render without issues 1`] = `
<View>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  />
</View>
`;
